@@ -49,8 +49,9 @@
 
 #if VPR_THREAD_DOMAIN_INCLUDE == VPR_DOMAIN_NSPR
 #  include <vpr/md/NSPR/Sync/RWMutexNSPR.h>
-#elif (VPR_THREAD_DOMAIN_INCLUDE == VPR_DOMAIN_POSIX) || \
-      (VPR_THREAD_DOMAIN_INCLUDE == VPR_DOMAIN_IRIX_SPROC)
+#elif (VPR_THREAD_DOMAIN_INCLUDE == VPR_DOMAIN_POSIX)
+#  include <vpr/md/POSIX/Sync/RWMutexPosix.h>
+#elif (VPR_THREAD_DOMAIN_INCLUDE == VPR_DOMAIN_IRIX_SPROC)
 
 namespace vpr
 {
